[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apr-benchmark"
version = "0.1.0"
description = "APR benchmark: Can LLMs Fix Each Other's & Human Bugs?"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.30",
    "anthropic>=0.25",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "tqdm>=4.66",
    "swebench>=2.1",
    "datasets>=3.0",
    "unidiff>=0.7",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
